Update /login and /us-signin to have the same behavior when called by an already authenticated user. They were similar - now identical.
GET w/ JSON now returns the same attributes (possible identity attributes etc) as a GET when not authenticated.

close #973
